--- a/pom.xml
+++ b/pom.xml
@@ -5,46 +5,53 @@
 	<artifactId>gavin-plus</artifactId>
 
 	<parent>
-		<groupId>org.molgenis</groupId>
+		<groupId>com.github.joerivandervelde.molgenis</groupId>
 		<artifactId>molgenis</artifactId>
-		<version>1.22.0-SNAPSHOT</version>
+		<version>24041b38a5</version>
 	</parent>
+
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
-			<groupId>org.molgenis</groupId>
+			<groupId>com.github.svandenhoek</groupId>
 			<artifactId>gavin</artifactId>
-			<version>${project.version}</version>
+			<version>eaf1362572</version>
 		</dependency>
 		<dependency>
-            <groupId>org.molgenis</groupId>
+            <groupId>com.github.joerivandervelde.molgenis</groupId>
             <artifactId>molgenis-data</artifactId>
-            <version>${project.version}</version>
+            <version>24041b38a5</version>
         </dependency>
         <dependency>
-            <groupId>org.molgenis</groupId>
+            <groupId>com.github.joerivandervelde.molgenis</groupId>
             <artifactId>molgenis-r</artifactId>
-            <version>${project.version}</version>
+            <version>24041b38a5</version>
         </dependency>
         <dependency>
-            <groupId>org.molgenis</groupId>
+            <groupId>com.github.joerivandervelde.molgenis</groupId>
             <artifactId>molgenis-data-csv</artifactId>
-            <version>${project.version}</version>
+            <version>24041b38a5</version>
         </dependency>
         <dependency>
-            <groupId>org.molgenis</groupId>
+            <groupId>com.github.joerivandervelde.molgenis</groupId>
             <artifactId>molgenis-data-vcf</artifactId>
-            <version>${project.version}</version>
+            <version>24041b38a5</version>
         </dependency>
         <dependency>
-			<groupId>org.molgenis</groupId>
+			<groupId>com.github.joerivandervelde.molgenis</groupId>
 			<artifactId>molgenis-core</artifactId>
-			<version>${project.version}</version>
+			<version>24041b38a5</version>
 		</dependency>
 		<dependency>
-			<groupId>org.molgenis</groupId>
+			<groupId>com.github.joerivandervelde.molgenis</groupId>
 			<artifactId>molgenis-core-ui</artifactId>
-			<version>${project.version}</version>
+			<version>24041b38a5</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.springframework</groupId>
@@ -70,9 +77,9 @@
 			<version>20141113</version>
 		</dependency>
 		<dependency>
-			<groupId>org.molgenis</groupId>
+			<groupId>com.github.joerivandervelde.molgenis</groupId>
 			<artifactId>molgenis-data-annotators</artifactId>
-			<version>${project.version}</version>
+			<version>24041b38a5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
