--- a/pom.xml
+++ b/pom.xml
@@ -24,34 +24,34 @@
 			<version>eaf1362572</version>
 		</dependency>
 		<dependency>
-            <groupId>com.github.joerivandervelde.molgenis</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>molgenis-data</artifactId>
-            <version>24041b38a5</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.joerivandervelde.molgenis</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>molgenis-r</artifactId>
-            <version>24041b38a5</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.joerivandervelde.molgenis</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>molgenis-data-csv</artifactId>
-            <version>24041b38a5</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.joerivandervelde.molgenis</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>molgenis-data-vcf</artifactId>
-            <version>24041b38a5</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-			<groupId>com.github.joerivandervelde.molgenis</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>molgenis-core</artifactId>
-			<version>24041b38a5</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.github.joerivandervelde.molgenis</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>molgenis-core-ui</artifactId>
-			<version>24041b38a5</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.springframework</groupId>
@@ -77,9 +77,9 @@
 			<version>20141113</version>
 		</dependency>
 		<dependency>
-			<groupId>com.github.joerivandervelde.molgenis</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>molgenis-data-annotators</artifactId>
-			<version>24041b38a5</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
